# tenocoin-core

./: .gitignore  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libnavcoinconsensus.pc.in
build-aux/m4/: tenocoin_find_bdb48.m4  tenocoin_qt.m4  tenocoin_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  qt_translations.py  tenocoin-cli.bash-completion  tenocoin-qt.pro  tenocoin-tx.bash-completion  tenocoind.bash-completion  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  rules  tenocoin-qt.desktop  tenocoin-qt.install  tenocoin-qt.lintian-overrides  tenocoin-qt.protocol  tenocoin-tx.bash-completion  tenocoin-tx.install  tenocoind.bash-completion  tenocoind.examples  tenocoind.install  tenocoind.lintian-overrides  tenocoind.manpages  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  (+4 more)
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  TenoCoin-4.0.files  TenoCoin4-Qt.files  TenoCoin4.files  addressindex.h  addrman.h  amount.h  arith_uint256.h  base58.cpp  base58.h  bignum.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  init.cpp  (+55 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: TenoCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  getaddresstoreceive.ui  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.h  paymentserver.cpp  paymentserver.h  (+57 more)
src/qt/forms/: helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: tenocoin_af.ts  tenocoin_af_ZA.ts  tenocoin_ar.ts  tenocoin_be_BY.ts  tenocoin_bg.ts  tenocoin_bg_BG.ts  tenocoin_ca.ts  tenocoin_ca@valencia.ts  tenocoin_ca_ES.ts  tenocoin_cs.ts  tenocoin_cs_CZ.ts  tenocoin_cy.ts  tenocoin_da.ts  tenocoin_de.ts  tenocoin_el.ts  tenocoin_el_GR.ts  tenocoin_en.ts  tenocoin_en_GB.ts  tenocoin_eo.ts  tenocoin_es.ts  tenocoin_es_AR.ts  tenocoin_es_CL.ts  tenocoin_es_CO.ts  tenocoin_es_DO.ts  tenocoin_es_ES.ts  tenocoin_es_MX.ts  tenocoin_es_UY.ts  tenocoin_es_VE.ts  tenocoin_et.ts  tenocoin_eu_ES.ts  tenocoin_fa.ts  tenocoin_fa_IR.ts  tenocoin_fi.ts  tenocoin_fr.ts  tenocoin_fr_CA.ts  tenocoin_fr_FR.ts  tenocoin_gl.ts  tenocoin_he.ts  tenocoin_hi_IN.ts  tenocoin_hr.ts  (+45 more)
src/qt/res/: tenocoin-qt-res.rc
src/qt/res/icons/: tenocoin.icns
src/qt/test/: paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h  tenocoinconsensus.cpp  tenocoinconsensus.h
src/secp256k1/src/java/: org_navcoin_NativeSecp256k1.c  org_navcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/navcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+17 more)
src/test/data/: README.md  tenocoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  tenotech.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+124 files in other folders)
